2014-01-29  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #16510]
	* sysdeps/x86/fpu/bits/mathinline.h: Check __SSE2_MATH__ instead
	of __x86_64__ when disabling x87 inline functions.

2014-01-04  Maxim Kuvyrkov  <maxim@kugelworks.com>
	    Ondřej Bílka  <neleai@seznam.cz>

	[BZ #15073]
	* malloc/malloc.c (_int_free): Perform sanity check only if we
        have_lock.

2013-02-08  Carlos O'Donell  <carlos@redhat.com>

	[BZ #15006]
	* sysdeps/generic/ldconfig.h: Define FLAG_ARM_LIBSF.
	* elf/cache.c (print_entry): Add FLAG_ARM_LIBSF support.

2013-03-30  David S. Miller  <davem@davemloft.net>

	* po/de.po: Update from translation team.

2013-01-31  David S. Miller  <davem@davemloft.net>

	* po/de.po: Update from translation team.

2013-01-11  Andreas Jaeger  <aj@suse.de>

	[BZ #15003]
	* sysdeps/unix/sysv/linux/bits/socket.h (MSG_FASTOPEN): New
	value. Sync with Linux 3.7.

2013-01-09  David S. Miller  <davem@davemloft.net>

	[BZ# 15003]
	* sysdeps/gnu/netinet/tcp.h (TCP_COOKIE_TRANSACTIONS,
	TCP_THIN_LINEAR_TIMEOUTS, TCP_THIN_DUPACK, TCP_USER_TIMEOUT,
	TCP_REPAIR, TCP_REPAIR_QUEUE, TCP_QUEUE_SEQ, TCP_REPAIR_OPTIONS,
	TCP_FASTOPEN): Define.
	(tcp_repair_opt): New structure.
	(TCP_NO_QUEUE, TCP_RECV_QUEUE, TCP_SEND_QUEUE, TCP_QUEUES_NR): New
	enum values.
	(TCP_COOKIE_MIN, TCP_COOKIE_MAX, TCP_COOKIE_PAIR_SIZE,
	TCP_COOKIE_IN_ALWAYS, TCP_COOKIE_OUT_NEVER, TCP_S_DATA_IN,
	TCP_S_DATA_OUT, TCP_MSS_DEFAULT, TCP_MSS_DESIRED): Define.
	(tcp_cookie_transactions): New structure.

2013-01-09  Andreas Jaeger  <aj@suse.de>

	* sysdeps/gnu/netinet/tcp.h (TCPI_OPT_SYN_DATA)
	(TCPI_OPT_ECN_SEEN): Define.  Sync with Linux 3.7.

2013-01-01  David S. Miller  <davem@davemloft.net>

	* po/fr.po: Update from translation team.
	* po/ca.po: Likewise.

2012-12-21  David S. Miller  <davem@davemloft.net>

	* po/hr.po: Update from translation team.

2012-12-21  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* sysdeps/s390/fpu/libm-test-ulps: Refreshed.

2012-12-19  Steve Ellcey  <sellcey@mips.com>
